hero overflow fix

--- a/app/src/viewcontrols/home/home.vc.less
+++ b/app/src/viewcontrols/home/home.vc.less
@@ -35,6 +35,7 @@
             height: 100%;
             .info { 
                 max-height: 100vh;
+                overflow-y: scroll;
                 h1 {
                     padding-top: 2em;
                     font-size: 3.7vw;
@@ -44,7 +45,7 @@
                     font-size: 2.7vw;
                 }
               #educ-link {
-                  margin-top: 4em;
+                  margin-top: 3em;
                   color: #fff;
                   font-size: 1.75vw;
                   
